[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://dialogue.gd" type="Script" id=2]
[ext_resource path="res://dialogue/alone.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dialogue/alonebold.ttf" type="DynamicFontData" id=4]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("LevelContainer")

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LevelContainer" type="Viewport" parent="."]
pause_mode = 1
size = Vector2( 256, 144 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true

[node name="Camera" type="Camera2D" parent="."]

[node name="LevelView" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="DialogueBox" type="Control" parent="HUD"]
visible = false
margin_right = 256.0
margin_bottom = 32.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="HUD/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SpeakerPicture" type="TextureRect" parent="HUD/DialogueBox"]
margin_left = 6.0
margin_top = 1.0
stretch_mode = 4

[node name="SpeakerLabel" type="Label" parent="HUD/DialogueBox"]
anchor_right = 1.0
margin_left = 43.0
theme = SubResource( 3 )

[node name="Dialogue" type="RichTextLabel" parent="HUD/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 12.0
theme = SubResource( 5 )
